--- a/Refugios_Climaticos/Mapa_Sombra.html
+++ b/Refugios_Climaticos/Mapa_Sombra.html
@@ -10,7 +10,7 @@
     <script src='https://www.unpkg.com/mapbox-gl-shadow-simulator/dist/mapbox-gl-shadow-simulator.umd.min.js'></script>
     <style>
         body {
-            font-family: Montserrat;
+            font-family: Gotham;
             padding: 0px;
             margin: 0px;
         }
