--- a/Refugios_Climaticos/Mapa_Sombra.html
+++ b/Refugios_Climaticos/Mapa_Sombra.html
@@ -59,6 +59,7 @@
             <div>
                 <span style="font-weight: bold; font-size:20px" >Sombras de Lisboa</span><br>
                 <span style="font-size: 15px;">Onde existe sombra de edifícios na cidade tendo em conta a altura do ano e hora? Este projeto faz parte da análise <a href="https://manuelbanza.github.io/refugios-climaticos-lisboa-priorizar/">"Refúgios Climáticos"</a>.</span><br>
+                <span style="color: #48AD68; font-size: 16px;">&#x25CF;</span><span style="color: black; font-size: 15px;"> - Uma árvore. Nota: A sombra disponível no mapa, apenas reflete a sombra dos edifícios e não das àrvores</span><br>
                 <span style="font-size: 13px;">Mapa: <a href="https://manuelbanza.github.io">Manuel Banza</a> Dados sombra: <a href="https://shademap.app/about/">ShadeMap</a>.</span>
             </div>            
         </div>
