--- a/3-30-300/Lisboa_Regra_3-30-300.html
+++ b/3-30-300/Lisboa_Regra_3-30-300.html
@@ -302,7 +302,7 @@
       var popupContent = '<div style="background-color: #F7E5AB; color: #E0743B; font-size: 16px; padding: 10px; font-family: Montserrat; border: none;">';
       popupContent += '<strong>Cumpre Regra:</strong> ' + cumpreRegra + '<br>';
       popupContent += '<strong>Número de Árvores a 30m:</strong> ' + nArvores30m + '<br>';
-      popupContent += '<strong>Percentagem de Cobertura de Árvores:</strong> ' + treeCoverPercentage + '%<br>';
+      popupContent += '<strong>% de Cobertura de Verde (Freguesia):</strong> ' + treeCoverPercentage + '%<br>';
       popupContent += '<strong>Jardim a 300m:</strong> ' + jardim300m + '<br>';
       popupContent += '<strong>Jardim:</strong> ' + jardim + '<br>';
       popupContent += '</div>';
@@ -322,7 +322,7 @@
       var popupContent = '<div style="background-color: #F7E5AB; color: #E0743B; font-size: 16px; padding: 10px; font-family: Montserrat; border: none;">';
       popupContent += '<strong>Cumpre Regra:</strong> ' + cumpreRegra + '<br>';
       popupContent += '<strong>Número de Árvores a 30m:</strong> ' + nArvores30m + '<br>';
-      popupContent += '<strong>Percentagem de Cobertura de Árvores:</strong> ' + treeCoverPercentage + '%<br>';
+      popupContent += '<strong>% de Cobertura de Verde (Freguesia):</strong> ' + treeCoverPercentage + '%<br>';
       popupContent += '<strong>Jardim a 300m:</strong> ' + jardim300m + '<br>';
       popupContent += '<strong>Jardim:</strong> ' + jardim + '<br>';
       popupContent += '</div>';
