--- a/3-30-300/Lisboa_Regra_3-30-300.html
+++ b/3-30-300/Lisboa_Regra_3-30-300.html
@@ -243,7 +243,7 @@
       legendContainer.style.bottom = '10px';
       legendContainer.style.right = '10px';
       legendContainer.innerHTML = `
-        <div style="text-align: center; margin-bottom: 5px;">Edifício Cumpre Regra</div>
+        <div style="text-align: center; margin-bottom: 5px;">Edifício 3-30-300</div>
         <div style="display: flex; align-items: center;">
           <div style="width: 15px; height: 15px; background-color: #4AB482;"></div>
           <div style="margin-left: 5px;">Cumpre</div>
