--- a/3-30-300/Lisboa_Regra_3-30-300.html
+++ b/3-30-300/Lisboa_Regra_3-30-300.html
@@ -37,7 +37,7 @@
       position: absolute;
       top: 10px;
       left: 10px;
-      width: 300px;
+      width: 350px;
       padding: 10px;
       background-color: #ffffff80; /* 50% opacity white background */
       border: 2px solid #E0743B; /* Add border with the specified color */
@@ -92,7 +92,7 @@
     - 🌲 3 Árvores possivéis de ver na tua janela de casa
   </p>
   <p>
-    - 🟢 30% de cobertura verde na tua freguesia
+    - 🟢 30% de cobertura verde na tua Secção de Freguesia
   </p>
   <p>
     - 🏞️ 300m de um jardim
