--- a/3-30-300/Metodologia_Pagina.html
+++ b/3-30-300/Metodologia_Pagina.html
@@ -19,7 +19,7 @@
     </ul>
 
     <h3>Tratamento de dados</h3>
-    <p>Para o tratamento dos dados e cálculo da regra procedemos aos seguintes passos:</p>
+    <p>O tratamento dos dados e cálculo da regra foram feitos usando programção em python. Procedemos aos seguintes passos:</p>
 
     <strong>Edifícios:</strong>
     <ul>
