--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -290,10 +290,10 @@
         <h2>De espaços escolares a Centros Urbanos Multifuncionais de Lisboa</h2>
         <p>Manuel Banza</p>
         <p>
-            (<a href="https://manuelbanza-github-io.translate.goog/Artigos/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html?_x_tr_sl=pt-PT&_x_tr_tl=en&_x_tr_hl=pt-PT&_x_tr_pto=wapp" target="_blank" style="color: #4fa96a; text-decoration: underline;">For English click here</a>)
+            (<a href="https://manuelbanza-github-io.translate.goog/Artigos/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html?_x_tr_sl=pt-PT&_x_tr_tl=en&_x_tr_hl=pt-PT&_x_tr_pto=wapp" target="_blank" style="color: white; text-decoration: underline;">For English click here</a>)
         </p>
         <div class="scroll-icon">⬇ Continue a fazer scroll para baixo</div>
-    </div>
+    </div>    
     
 
     <!-- Section 1 -->
