--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -334,7 +334,7 @@
     <div class="section" id="section3">
         <div class="scroll-icon map" style="color: black;">⬇ Continue a fazer scroll para baixo</div>
         <div class="legend">
-            <div class="legend-title">10m2 per capita por freguesia</div>
+            <div class="legend-title">m2 de área verde per capita por freguesia</div>
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #B30000;"></div><span>0 - 5</span>
             </div>
