--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -277,6 +277,22 @@
             }
         }
 
+        /* Mobile-specific fix for problematic sections */
+        @media (max-width: 480px) {
+            #section5 div,
+            #section7 div,
+            #section8 div,
+            #section10 div {
+                text-align: start; /* Align to the natural flow of text */
+                hyphens: auto; /* Enable hyphenation for better line breaks */
+                word-break: break-word; /* Avoid long words breaking layout */
+                overflow-wrap: break-word; /* Ensure text wraps properly */
+                line-height: 1.6; /* Slightly increase line spacing for readability */
+                font-size: 1em; /* Maintain a readable font size */
+                margin: 0 auto; /* Center the content */
+                padding: 10px; /* Add consistent padding for aesthetics */
+            }
+        }
 
 
 
