--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -279,7 +279,10 @@
 
         /* Mobile-specific fix for problematic sections */
         @media (max-width: 480px) {
+            #section2 div,
+            #section4 div,
             #section5 div,
+            #section6 div,
             #section7 div,
             #section8 div,
             #section10 div {
