--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -485,7 +485,7 @@
             <!-- Section 13 Content -->
             <div class="text-box" id="section13">
                 <div>
-                    Podemos propor três possíveis blocos de implementação do projeto. A escola é uma infraestrutura que permanece fechada metade do ano, incluindo férias, fins de semana e feriados. Em média, tem o potencial de estar aberta até mais 9 horas por dia, estando fechada 63 dias ao ano por ser fim de semana e feriados, além de permanecer encerrada durante 78 dias consecutivos nas férias de verão.
+                    Podemos propor três possíveis blocos de implementação do projeto. A escola é uma infraestrutura que permanece fechada metade do ano, incluindo férias, fins de semana e feriados. Em média, tem o potencial de estar aberta até mais 9 horas por dia, estando fechada por volta de 63 dias ao ano por ser fim de semana e feriados, além de permanecer encerrada até 78 dias consecutivos nas férias de verão.
                 </div>
             </div>
         </div>
