--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -7,6 +7,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0.css" rel="stylesheet" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Lisboa: Escolas Vivas" />
+    <meta property="og:description" content="De espaços escolares a Centros Urbanos Multifuncionais de Lisboa" />
+    <meta property="og:image" content="https://manuelbanza.github.io/Artigos/Escolas_Vivas_Interactivo//images/thumbnail2.png" />
+    <meta property="og:url" content="https://manuelbanza.github.io/Artigos/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Lisboa: Escolas Vivas" />
+    <meta name="twitter:description" content="De espaços escolares a Centros Urbanos Multifuncionais de Lisboa" />
+    <meta name="twitter:image" content="https://manuelbanza.github.io/Artigos/Escolas_Vivas_Interactivo//images/thumbnail2.png" />
+
+
     <style>
         body {
             margin: 0;
