--- a/Escolas_Vivas_Interactivo/mapa_escolas_vivas.html
+++ b/Escolas_Vivas_Interactivo/mapa_escolas_vivas.html
@@ -316,6 +316,14 @@
         <div class="scroll-icon">⬇ Continue a fazer scroll para baixo</div>
     </div>
 
+    <!-- Chapter 1.5 -->
+    <div class="chapter chapter3" id="final-block" style="background-color: #fffaf1; color: black; padding: 40px 20px; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+        <h2 style="margin-bottom: 20px;">O potencial das escolas vai além do ensino: podem tornar-se espaços de convívio, apoio comunitário e resposta aos desafios urbanos.</h2>
+        <div class="scroll-icon" style="color: black;">⬇ continue a fazer scroll para baixo</div>
+    </div>
+
+
+
     <!-- Section 1 -->
     <div class="section" id="section1">
         <div class="scroll-icon map" style="color: black;">⬇ Continue a fazer scroll para baixo</div>
@@ -344,11 +352,12 @@
 
     <!-- Section 2 -->
     <div class="section" id="section2">
-        <div class="text-box text-red">
+        <div class="text-box" style="color: #8B0000; background: rgba(255, 255, 255, 0.9); padding: 20px; border-radius: 8px; font-size: 1.2em; max-width: 800px; line-height: 1.5; font-weight: 500; text-align: justify;">
             Lisboa é a sétima cidade da Europa mais exposta ao calor, um problema que tem agravado o número de mortes relacionadas com as ondas de calor e acentuado as desigualdades sociais. O efeito de ilha de calor, provocado pela urbanização densa e pela escassez de vegetação, afeta desproporcionalmente os mais vulneráveis, como idosos e crianças. Portugal é ainda o segundo pior país da União Europeia em termos de capacidade das pessoas para arrefecerem as suas habitações.
         </div>
         <div class="scroll-icon map" style="color: black;">⬇ Continue a fazer scroll para baixo</div>
     </div>
+
 
     <!-- Section 3 -->
     <div class="section" id="section3">
@@ -370,7 +379,7 @@
     <!-- Section 4 -->
     <div class="section" id="section4">
         <div class="text-box text-green">
-            Lisboa carece de espaços públicos que fomentem o convívio e o sentimento de pertença. Em 16 dos 24 distritos, a área verde por habitante é inferior aos 10 m² recomendados pela OMS, limite essencial para a saúde física e mental. Além de promoverem lazer e socialização, os espaços verdes mitigam a poluição e o calor urbano, sendo fundamentais para cidades mais inclusivas e resilientes face às mudanças climáticas.
+            Lisboa carece de espaços públicos que fomentem o convívio e o sentimento de pertença. Em 16 dos 24 freguesias, a área verde por habitante é inferior aos 10 m² recomendados pela OMS, limite essencial para a saúde física e mental. Além de promoverem lazer e socialização, os espaços verdes mitigam a poluição e o calor urbano, sendo fundamentais para cidades mais inclusivas e resilientes face às mudanças climáticas.
         </div>
         <div class="scroll-icon map">⬇ Continue a fazer scroll para baixo</div>
     </div>
@@ -599,10 +608,11 @@
         </div>
     </div>
 
-    <!-- Section 27 -->
-    <div class="section" id="section23" style="background-color: #fffaf1; display: flex; justify-content: center; align-items: center; height: 80vh; margin-bottom: -20px;">
-        <h3 style="color: #4fa96a; font-size: 2em; text-align: center;">Conclusão</h3>
-    </div>
+        <!-- Section 27 -->
+        <div class="section" id="section23" style="background-color: #fffaf1; display: flex; justify-content: center; align-items: center; height: 80vh; margin-bottom: -20px;">
+            <hr style="width: 30%; border: none; border-top: 2px solid #4fa96a; margin: 0 auto;" />
+        </div>
+
 
     <!-- New Background Section with 2 Blocks -->
     <div class="section continuous-text-section" id="background-section-2blocks" style="margin-top: -25px;">
@@ -624,7 +634,7 @@
     <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
 
     <!-- Final Block with 3 Sections -->
-    <div class="section continuous-text-section" id="final-block">
+    <div class="section continuous-text-section" id="final-block" style="background-color: #E2E0D0;">
         <div class="content-container">
 
             <!-- Section 30 -->
@@ -647,6 +657,7 @@
 
         </div>
     </div>
+
 
 
 
