--- a/Escolas_Vivas_Interactivo/mapa_escolas_vivas.html
+++ b/Escolas_Vivas_Interactivo/mapa_escolas_vivas.html
@@ -634,29 +634,36 @@
     <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
 
     <!-- Final Block with 3 Sections -->
-    <div class="section continuous-text-section" id="final-block" style="background-color: #E2E0D0;">
-        <div class="content-container">
+    <div class="section continuous-text-section" id="final-block" style="background-color: #E2E0D0; padding: 40px 20px;">
+        <div class="content-container" style="text-align: center;">
 
             <!-- Section 30 -->
-            <div class="text-block" id="section30" style="text-align: justify;">
+            <div class="text-block" id="section30" style="text-align: justify; margin-bottom: 20px;">
                 <strong>Este trabalho é um resumo da minha tese de mestrado em Urbanismo Próximo no IAAC - Institute for Advanced Architecture of Catalonia, defendida em Julho de 2024. Se tens interesse em saber mais sobre este projeto, podes consultar a tese final em PDF na imagem abaixo:</strong>
             </div>
 
             <!-- Section 31 -->
-            <div class="text-block" id="section31" style="text-align: center; margin-top: 20px;">
+            <div class="text-block" id="section31" style="margin-top: 20px;">
                 <a href="https://drive.google.com/file/d/1oUHV3YR07JjyvIKRWh9oFaJtsPw9nk9I/view" target="_blank">
-                    <img src="http://127.0.0.1:5500/Escolas_Vivas_Interactivo/images/capa_tese.png" alt="Tese Final" style="width: 200px; height: auto; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
+                    <img src="http://127.0.0.1:5500/Escolas_Vivas_Interactivo/images/capa_tese.png" 
+                        alt="Tese Final" 
+                        style="width: 200px; height: auto; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
                 </a>
             </div>
 
             <!-- Section 32 -->
-            <div class="text-block" id="section32" style="text-align: center; margin-top: 20px;">
+            <div class="text-block" id="section32" style="margin-top: 20px;">
                 <p><strong>Autor: Manuel Banza</strong></p>
-                <p><a href="https://manuelbanza.github.io/" target="_blank" style="color: #4fa96a; text-decoration: none;">Website: https://manuelbanza.github.io/</a></p>
+                <p>
+                    <a href="https://manuelbanza.github.io/" target="_blank" style="color: #4fa96a; text-decoration: none;">
+                        Website: https://manuelbanza.github.io/
+                    </a>
+                </p>
             </div>
 
         </div>
     </div>
+
 
 
 
