--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -655,7 +655,7 @@
             <!-- Section 31 -->
             <div class="text-block" id="section31" style="margin-top: 20px;">
                 <a href="https://drive.google.com/file/d/1oUHV3YR07JjyvIKRWh9oFaJtsPw9nk9I/view" target="_blank">
-                    <img src="http://127.0.0.1:5500/Escolas_Vivas_Interactivo/images/capa_tese.png" 
+                    <img src="https://manuelbanza.github.io/Artigos/Escolas_Vivas_Interactivo/images/capa_tese.png" 
                         alt="Tese Final" 
                         style="width: 200px; height: auto; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
                 </a>
