--- a/Escolas_Vivas_Interactivo/mapa_escolas_vivas.html
+++ b/Escolas_Vivas_Interactivo/mapa_escolas_vivas.html
@@ -13,6 +13,15 @@
             font-family: 'Montserrat', sans-serif;
         }
 
+        .author-photo {
+            width: 50px; /* Adjust the size as needed */
+            height: 50px;
+            border-radius: 50%; /* Makes it a circle */
+            object-fit: cover; /* Ensures it covers the circle properly */
+            display: block;
+            margin: 10px auto; /* Centers the image */
+            border: 1px solid white; /* Optional: adds a border */
+        }
 
         
         #map {
@@ -311,6 +320,8 @@
     <div class="chapter chapter1" id="chapter1">
         <h1>Escolas Vivas</h1>
         <h2>De espaços escolares a Centros Urbanos Multifuncionais de Lisboa</h2>
+        <img src="https://manuelbanza.github.io/assets/img/manuel_foto.jpg" alt="Manuel Banza"
+            class="author-photo">
         <p>Manuel Banza</p>
         <p>(For english click here)</p>
         <div class="scroll-icon">⬇ Continue a fazer scroll para baixo</div>
