--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -27,6 +27,17 @@
             margin: 0;
             font-family: 'Montserrat', sans-serif;
         }
+
+        .author-photo {
+            width: 50px; /* Adjust the size as needed */
+            height: 50px;
+            border-radius: 50%; /* Makes it a circle */
+            object-fit: cover; /* Ensures it covers the circle properly */
+            display: block;
+            margin: 10px auto; /* Centers the image */
+            border: 1px solid white; /* Optional: adds a border */
+        }
+
         #map {
             position: fixed;
             top: 0;
@@ -322,6 +333,8 @@
     <div class="chapter chapter1" id="chapter1">
         <h1>Escolas Vivas</h1>
         <h2>De espaços escolares a Centros Urbanos Multifuncionais de Lisboa</h2>
+        <img src="https://manuelbanza.github.io/assets/img/manuel_foto.jpg" alt="Manuel Banza"
+            class="author-photo">
         <p>Manuel Banza</p>
         <p>
             (<a href="https://manuelbanza-github-io.translate.goog/Artigos/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html?_x_tr_sl=pt-PT&_x_tr_tl=en&_x_tr_hl=pt-PT&_x_tr_pto=wapp" target="_blank" style="color: white; text-decoration: underline;">For English click here</a>)
