--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -587,6 +587,8 @@
     <!-- Blank Section -->
     <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
 
+    
+
     <!-- New Background Section (Continuous Text Flow - Part 2) -->
     <div class="section continuous-text-section" id="background-section-part2">
         <div class="content-container">
@@ -604,6 +606,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Blank Section -->
+    <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
 
     <!-- Section 23 -->
     <div class="section" id="section23" style="background-color: #fffaf1; display: flex; justify-content: center; align-items: center; height: 80vh; margin-bottom: -20px;">
