--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas.html
@@ -601,7 +601,9 @@
                 <strong>Cedência de salas para associações e cooperativas:</strong> Um dos aspetos essenciais desta proposta é a cedência de salas de aula e auditórios para reuniões, assembleias e eventos organizados por associações e cooperativas que, devido ao aumento dos preços de arrendamento em Lisboa, têm cada vez menos capacidade para manter um espaço próprio. A disponibilização de espaços nas escolas permite-lhes continuar a desempenhar o seu papel fundamental sem custos proibitivos, garantindo a continuidade de atividades culturais, sociais e de apoio à comunidade. Além disso, as infraestruturas escolares podem ser partilhadas com organizações desportivas e culturais, permitindo o acesso a novas modalidades e atividades recreativas, como aulas e ensaios de teatro, música e dança. A criação de protocolos de cedência pode garantir que, em troca do espaço, algumas destas atividades sejam gratuitas para pessoas com menos capacidade financeira, promovendo a inclusão.
             </div>
 
-
+            <!-- Blank Section -->
+            <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
+            
             <!-- Section 22 -->
             <div class="text-block" id="section22">
                 <strong>Assembleias de cidadãos:</strong> As infraestruturas escolares podem ser utilizadas para assembleias de cidadãos, onde a comunidade discute e toma decisões coletivas sobre o bairro. Estas assembleias são essenciais para fortalecer a democracia participativa e garantir que as decisões refletem as necessidades locais, bem como para criar um sentimento de bairrismo e de apoio mútuo entre os vizinhos.
