--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -598,7 +598,7 @@
             </div>
             <!-- Section 21 -->
             <div class="text-block" id="section21">
-                <strong>Cedência de salas para associações e cooperativas:</strong> Um dos aspetos essenciais desta proposta é a cedência de salas de aula e auditórios para reuniões, assembleias e eventos organizados por associações e cooperativas que, devido ao aumento dos preços de arrendamento em Lisboa, têm cada vez menos capacidade para manter um espaço próprio. A disponibilização de espaços nas escolas permite-lhes continuar a desempenhar o seu papel fundamental sem custos proibitivos, garantindo a continuidade de atividades culturais, sociais e de apoio à comunidade. Além disso, as infraestruturas escolares podem ser partilhadas com organizações desportivas e culturais, permitindo o acesso a novas modalidades e atividades recreativas, como aulas e ensaios de teatro, música e dança. A criação de protocolos de cedência pode garantir que, em troca do espaço, algumas destas atividades sejam gratuitas para pessoas com menos capacidade financeira, promovendo a inclusão.
+                <strong>Cedência de salas para associações e cooperativas:</strong> Um dos aspetos essenciais desta proposta é a cedência de salas de aula e auditórios para reuniões, assembleias e eventos organizados por associações e cooperativas que, devido ao aumento dos preços de arrendamento em Lisboa, têm cada vez menos capacidade para manter um espaço próprio. A disponibilização de espaços nas escolas permite-lhes continuar a desempenhar o seu papel fundamental sem custos proibitivos, garantindo a continuidade de atividades culturais, sociais e de apoio à comunidade. Além disso, as infraestruturas escolares podem ser partilhadas com organizações desportivas e culturais, permitindo o acesso a novas modalidades e atividades recreativas, como aulas e ensaios de teatro, música e dança.
             </div>
 
             <!-- Section 22 -->
@@ -778,7 +778,7 @@
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/light-v10',
-            center: [-9.1525946, 38.72],
+            center: [-9.1525946, 38.734],
             zoom: 10.8
         });
 
