--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -692,8 +692,11 @@
 
             <!-- Section 28 -->
             <div class="text-block" id="section28" style="margin-top: -25px;">
-                <strong>Cidades europeias já implementaram com sucesso ideias semelhantes.</strong> É o caso de Barcelona que abriu no Verão de 2024 mais 38 pátios escolares como refúgios climáticos e tem mais de 200 escolas que foram alvo de melhoria e aumento do espaço pedonal nas ruas em frente às escolas.
+                <strong>Cidades europeias já implementaram com sucesso ideias semelhantes.</strong> 
+                É o caso de Barcelona que abriu no Verão de 2024 mais 38 pátios escolares como refúgios climáticos e tem mais de 200 escolas que foram alvo de melhoria e aumento do espaço pedonal nas ruas em frente às escolas.
+                <br><br> <!-- Add double break line for extra spacing -->
             </div>
+
 
             <!-- Section 29 -->
             <div class="text-block" id="section29" style="margin-top: -25px;">
