--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -299,11 +299,24 @@
             text-align: justify; /* Keep the text aligned properly */
         }
 
+        #section19 img {
+            display: block;
+            width: 100%;
+            max-width: 800px;
+            height: auto;
+            max-height: 400px;
+            object-fit: cover;
+            margin: 40px auto; /* Adds space before and after */
+        }
+
+
         .continuous-text-section {
             background-color: #fffaf1;
-            padding: 40px 20px;
-            margin: 0;
+            padding: 60px 20px; /* Increased padding to prevent overlap */
+            margin-top: 40px; /* Extra margin to ensure spacing */
+            min-height: 100vh; /* Ensures each section has enough space */
         }
+
 
         .content-container {
             max-width: 800px;
@@ -315,8 +328,9 @@
         }
 
         .text-block {
-            margin-bottom: 20px; /* Space between paragraphs */
+            margin-bottom: 40px; /* Increased spacing between text blocks */
         }
+
 
         @media (max-width: 768px) {
             .content-container {
@@ -333,9 +347,7 @@
                 padding: 10px;
             }
 
-            .text-block {
-                margin-bottom: 15px; /* Adjust spacing for smaller screens */
-            }
+
         }
 
         /* Mobile-specific fix for problematic sections */
@@ -358,6 +370,24 @@
             }
         }
 
+        #background-section-part1,
+        #background-section-part2 {
+            margin-bottom: 60px; /* Forces space between the sections */
+        }
+
+        @media (max-width: 768px) {
+            .continuous-text-section {
+                padding: 80px 20px; /* More padding for smaller screens */
+            }
+
+            .text-block {
+                margin-bottom: 50px; /* Forces spacing */
+            }
+
+            #section19 img {
+                margin: 50px auto; /* Extra margin for image */
+            }
+        }
 
 
 
